Fix using git_config module

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,17 @@
----
-# tasks file for git
 - name: Initialize git user.name
   with_items: "{{ users }}"
   become: yes
   become_user: "{{ item.user }}"
-  command: 'git config --global user.name "{{ item.name }}"'
+  git_config:
+    scope: global
+    name: user.name
+    value: "{{ item.name }}"
 
 - name: Initialize git user.email
   with_items: "{{ users }}"
   become: yes
   become_user: "{{ item.user }}"
-  command: 'git config --global user.name "{{ item.email }}"'
+  git_config:
+    scope: global
+    name: user.email
+    value: "{{ item.email }}"
